Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.0.0 RC 1
-
Fix Version/s: 5.0.0
-
Component/s: Build tools: qmake
-
Labels:None
-
Environment:VS
Description
qmake embeds manifest for DLLs with wrong resource id
What it does:
mt.exe /nologo /manifest mylib.dll.embed.manifest /outputresource:mylib.dll;1
What it should do:
mt.exe /nologo /manifest mylib.dll.embed.manifest /outputresource:mylib.dll;2
This was broken in https://codereview.qt-project.org/#change,32579
Attachments
Issue Links
- is required for
-
QTBUG-27426 Qt 5.0 Final release tasks
-
- Closed
-